Some improvements have been added.

--- a/index.html
+++ b/index.html
@@ -7,12 +7,16 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <!-- Hover.css Library -->
   <link rel="stylesheet" href="src/Offices/Hover-master/css/hover.css">
+  <!-- Font Awesome Library -->
+  <link rel="stylesheet" href="src/Offices/fontawesome-free-6.5.2-web/css/all.css">
   <title>people of the quran</title>
 </head>
 
 <body>
   <div id="root"></div>
 </body>
+<!-- Font Awesome Library -->
+<script src="src/Offices/fontawesome-free-6.5.2-web/js/all.js"></script>
 <script type="module" src="/src/main.jsx"></script>
 </body>
 
